--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
         <script>
-            window.onload = () => {
-              document.querySelector('a-gltf-model').addEventListener('click', () => {
-                window.open('https://google.com', '_blank');
-              });
-            };
-          </script>
+            AFRAME.registerComponent('link-opener', {
+                init: function () {
+                    this.el.addEventListener('click', function () {
+                        window.open('https://www.google.com', '_blank');
+                    });
+                }
+            });
+        </script>
     </head>
-
     <body style="margin: 0; overflow: hidden;">
         <a-scene
             vr-mode-ui="enabled: false;"
@@ -33,14 +34,8 @@
             </a-assets>
 
             <a-marker
-                id="animated-marker"
-                type="pattern"
                 preset="custom"
                 url="assets/marker.patt"
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
             >
                 <a-entity
                     id="bowser-model"
@@ -49,6 +44,7 @@
                     gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
+                    link-opener
                 ></a-entity>
             </a-marker>
 
